[gd_scene load_steps=12 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://assets/road.png" type="Texture" id=2]
[ext_resource path="res://Vampire.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/coin.png" type="Texture" id=4]
[ext_resource path="res://assets/sun.png" type="Texture" id=5]
[ext_resource path="res://assets/font.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://assets/hammer.png" type="Texture" id=7]
[ext_resource path="res://assets/clothespin.png" type="Texture" id=8]

[sub_resource type="TileSet" id=1]
0/name = "road.png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 128, 128 )
0/tile_mode = 1
0/autotile/bitmask_mode = 1
0/autotile/bitmask_flags = [ Vector2( 0, 1 ), 18, Vector2( 0, 2 ), 24, Vector2( 0, 3 ), 26, Vector2( 1, 0 ), 144, Vector2( 1, 1 ), 146, Vector2( 1, 2 ), 152, Vector2( 1, 3 ), 154, Vector2( 2, 0 ), 48, Vector2( 2, 1 ), 50, Vector2( 2, 2 ), 56, Vector2( 2, 3 ), 58, Vector2( 3, 0 ), 176, Vector2( 3, 1 ), 178, Vector2( 3, 2 ), 184, Vector2( 3, 3 ), 186 ]
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 32, 32 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 7.67647 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 6 )

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="TileMap" type="TileMap" parent="."]
position = Vector2( -1, 0 )
tile_set = SubResource( 1 )
cell_size = Vector2( 32, 32 )
cell_custom_transform = Transform2D( 32, 0, 0, 32, 0, 0 )
format = 1

[node name="Vampire" parent="TileMap" instance=ExtResource( 3 )]
playing = true

[node name="Sun" type="Sprite" parent="TileMap"]
position = Vector2( 166.5, 288 )
scale = Vector2( 29.6875, 17 )
z_index = 2
texture = ExtResource( 5 )

[node name="Area2D" type="Area2D" parent="TileMap/Sun" groups=["sun"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TileMap/Sun/Area2D"]
position = Vector2( 0, 0.441174 )
shape = SubResource( 2 )

[node name="GUI" type="CanvasLayer" parent="."]

[node name="CoinCount" type="Panel" parent="GUI"]
margin_left = 8.0
margin_top = 8.0
margin_right = 71.0
margin_bottom = 24.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Image" type="TextureRect" parent="GUI/CoinCount"]
margin_right = 62.0
margin_bottom = 16.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Count" type="Label" parent="GUI/CoinCount"]
margin_left = 17.0
margin_top = 2.0
margin_right = 45.0
margin_bottom = 18.0
custom_fonts/font = SubResource( 3 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HammerCount" type="Panel" parent="GUI"]
visible = false
margin_left = 8.0
margin_top = 27.0
margin_right = 71.0
margin_bottom = 43.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Image" type="TextureRect" parent="GUI/HammerCount"]
margin_right = 62.0
margin_bottom = 16.0
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Count" type="Label" parent="GUI/HammerCount"]
margin_left = 17.0
margin_top = 2.0
margin_right = 45.0
margin_bottom = 18.0
custom_fonts/font = SubResource( 3 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MoveCount" type="Panel" parent="GUI"]
margin_left = 8.0
margin_top = 30.0
margin_right = 71.0
margin_bottom = 46.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Count" type="Label" parent="GUI/MoveCount"]
margin_left = 3.0
margin_top = 2.0
margin_right = 31.0
margin_bottom = 18.0
custom_fonts/font = SubResource( 3 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClothespinCount" type="Panel" parent="GUI"]
visible = false
margin_left = 8.0
margin_top = 46.0
margin_right = 71.0
margin_bottom = 62.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Image" type="TextureRect" parent="GUI/ClothespinCount"]
margin_right = 62.0
margin_bottom = 16.0
texture = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Count" type="Label" parent="GUI/ClothespinCount"]
margin_left = 17.0
margin_top = 2.0
margin_right = 45.0
margin_bottom = 18.0
custom_fonts/font = SubResource( 3 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0

[connection signal="dead" from="TileMap/Vampire" to="." method="_on_Vampire_dead"]
[connection signal="inventory_update" from="TileMap/Vampire" to="." method="_on_Vampire_inventory_update"]
[connection signal="slow_down" from="TileMap/Vampire" to="." method="_on_Vampire_slow_down"]
[connection signal="speed_up" from="TileMap/Vampire" to="." method="_on_Vampire_speed_up"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
